fix: changes gap between all the element and also change color of content

--- a/styles.css
+++ b/styles.css
@@ -47,11 +47,17 @@ main {
   padding: 1.5rem;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 .faq{
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+  p{
+    font-size: 1.2rem;
+    color: hsl(237, 12%, 33%);
+  
+  }
   
 }
 .queicon{
